fixed scrollbar

--- a/widgets/gallery/gallery.scss
+++ b/widgets/gallery/gallery.scss
@@ -3,7 +3,19 @@
   background: white;
 
   h1 {
-    display: none;
+    font-family: "brandon-grotesque",sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: white;
+    background: rgba(0, 0, 0, .5);
+    width: 450px;
+    bottom: 10px;
+    margin-bottom: 0;
+    position: absolute;
+    z-index: 10;
+    
   }
 
   img {
